--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 html, body {
     height: 100%;
     width: 100%;
+    cursor: none;
 }
 
 .container{
@@ -25,16 +26,27 @@ html, body {
 }
 
 .cursor {
-    height: 20px;
-    width: 20px;
+    height: 18px;
+    width: 18px;
     background-color: blue;
     border-radius: 50%;
     position: fixed;
     z-index: 99;
-    transition:0.1s ;
+}
+
+.cursor-blur {
+    height: 100px;
+    width: 100px;
+    background-color: blue;
+    filter: blur(70px);
+    border-radius: 50%;
+    position: fixed;
+    z-index: 9;
+    transition:0.3s ;
 }
 
 #home {
+    z-index: 10;
     color: #fff;
     height:100vh;
     width: 100%;
@@ -95,6 +107,7 @@ html, body {
 }
 
 #about{
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,6 +119,7 @@ html, body {
 }
 
 #about h1 {
+    z-index: 2;
     font-size: 3vw;
     margin-bottom: 20px; 
 }
@@ -150,6 +164,7 @@ html, body {
 }
 
 #skills {
+    z-index: 10;
     color: #fff;
     height: 100vh;
     width: 100%;
@@ -234,6 +249,7 @@ html, body {
 
 
 #projects {
+    z-index: 10;
     height: 100vh;
     width: 100%;
     background-color: #dadada;
@@ -241,6 +257,7 @@ html, body {
 }
 
 #contact {
+    z-index: 10;
     position: relative;
     display: flex;
     flex-direction: column;
