--- a/style.css
+++ b/style.css
@@ -89,22 +89,12 @@ a {
     position: relative;
 }
 
-#home .nameDiv, #home .devDiv {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: fit-content;
-    width: 100%;
-    overflow-y: hidden;
-}
-
 #home .name {
     font-family: Gilroy;
     color: #ffffff;
     font-size: 6vw;
     -webkit-text-stroke: 1px #fff;
     -webkit-text-stroke-width: 1px;
-    transform: translateY(100%);
 }
 
 #home span {
@@ -117,7 +107,6 @@ a {
 
 #home .developer {
     font-family: Gilroy;
-    /* color: rgb(218, 104, 38); */
     background: linear-gradient(#00a1ff,#00ff8f);
     background-clip: text;
     -webkit-background-clip: text;
@@ -125,7 +114,6 @@ a {
     font-size: 6.5vw;
     -webkit-text-stroke: 2px #fff;
     -webkit-text-stroke-width: 1px;
-    transform: translateY(100%);
 }
 
 
@@ -303,4 +291,184 @@ a {
     margin-top: 1vw;
     font-weight: 400;
 }
+@media (max-width:800px) {
+    #home .greeting {
+        font-size: 6vw;
+        margin-bottom: 10px;
+    }
+    #home .name {
+        font-size: 8vw;
+    }
 
+    #home .developer {
+        font-size: 9vw;
+    }
+
+    .dots .dot {
+        height: 10px;
+        width: 10px;
+    }
+
+    #about .left{
+        width: 50%;
+    } 
+    #about .right{
+        width: 50%;
+    } 
+
+    #about h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 5vw;
+        margin: 2vw 0;
+    }
+
+    #about img {
+        filter: grayscale(0);
+        height: 300px;
+    }
+
+    #about .right p {
+        font-size: 2vw;
+        letter-spacing: 0.8;
+        line-height: 1.3;
+    }
+    
+    #skills #heading h1 {
+        font-size: 7vw;
+    }
+
+    #skill-set {
+        padding: 3vw;
+    }
+
+    #skills img {
+        height: 60px;
+        width: 60px;
+    }
+
+    #skills .skill-card {
+        height:100px;
+        width: 100px;
+        padding: 60px;
+        font-size: 14px;
+    }
+
+    #footer {
+        height: 100vh;
+    }
+    #footer h1 {
+        font-size: 7.5vw;
+    }
+
+}
+
+@media (max-width:680px) {
+
+    #about {
+        padding: 0px;
+    }
+
+    #about .left{
+        height: 400px;
+        width: 50%;
+    } 
+    #about .right{
+        width: 50%;
+    } 
+
+    #about h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 5vw;
+        margin: 2vw 0;
+    }
+
+    #about img {
+        filter: grayscale(0);
+        height: 40vw;
+    }
+
+    #about .right p {
+        font-size: 2.5vw;
+        letter-spacing: 0.5;
+        line-height: 1.3;
+        word-spacing: 0;
+    }
+
+
+}
+
+@media (max-width:480px) {
+
+    
+    #home .name {
+        font-size: 10vw;
+    }
+    #home .developer {
+        font-size: 11vw;
+    }
+    #home .greeting {
+        font-size: 8vw;
+    }
+    #home .scroll {
+
+        margin-top: 35vw;
+    }
+
+
+    #about .about-me .left, #about .about-me .right{
+        width: 100%;
+        height: 50vh;
+    }
+    #about .about-me {
+        flex-direction: column;
+    }
+    #about h1 {
+        font-size: 7vw;
+    }
+    #about .left img {
+        height: 70vw;
+        width: 70vw;
+        border-radius: 50%;
+    }
+    #about .about-me .right p{
+        font-size: 5vw;
+        text-align: center;
+    }
+
+    #skills #heading h1 {
+        font-size: 9vw;
+    }
+
+    #skills #heading h2 {
+        font-size: 4.8vw;
+        opacity: 0.5;
+    }
+
+    #skill-set {
+        padding: 1vw;
+    }
+
+    #skills img {
+        height: 50px;
+        width: 50px;
+    }
+
+    #skills .skill-card {
+        height:50px;
+        width: 50px;
+        padding: 55px;
+        font-size: 10px;
+    }
+
+    .dots {
+        display: none;
+    }
+
+    #footer h1 {
+
+        font-size: 12vw;
+        line-height: 1.3;
+    }
+}
