--- a/style.css
+++ b/style.css
@@ -24,6 +24,24 @@ html, body {
     position: relative;
 }
 
+.back {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    filter: blur(5px);
+}
+
+.back img {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    filter: brightness(0.8);
+}
+
 .dots {
     display: flex;
     align-items: center;
