--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
 
 @font-face {
     font-family: Gilroy;
@@ -13,41 +14,101 @@
     
 }
 
+*::selection {
+    background-color: white;
+    color: black;
+}
+
 html, body {
     height: 100%;
     width: 100%;
-    cursor: none;
+    /* cursor: none; */
 }
 
+.loading {
+    
+    height: 100vh;
+    width: 100%;
+    background-color: #e0dcdc;
+    position: fixed;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+    font-size: 1.5vw;
+    letter-spacing: 1px;
+}
+
+.loading h1 {
+    font-family: 'Michroma', sans-serif;
+}
 .container{
     width: 100%;
     background-color: black;
     position: relative;
 }
 
-.cursor {
-    height: 18px;
-    width: 18px;
-    background-color: blue;
-    border-radius: 50%;
-    position: fixed;
-    z-index: 99;
+
+.back {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    filter: blur(8px);
 }
 
-.cursor-blur {
-    height: 100px;
-    width: 100px;
-    background-color: blue;
-    filter: blur(70px);
-    border-radius: 50%;
-    position: fixed;
-    z-index: 9;
-    transition:0.3s ;
+.back img {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    filter: brightness(0.5);
 }
+
+#nav {  
+    overflow: hidden;
+    color: #e0dddd;
+    height: 75px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3vw 3vw;
+    border-bottom: 1px solid #000000;
+}
+
+#nav ul {
+    list-style: none;
+    display: flex;
+    gap: 30px;
+}
+
+#nav h2{
+    /* font-family: "Kajiro"; */
+    font-size: 35px;
+
+}
+
+#nav ul li {
+    background: linear-gradient(#00a1ff,#00ff8f);
+    padding: 10px 20px;
+    border-radius: 100px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+a {
+    font-weight: 600;
+    color: #000000;
+    text-decoration: none;
+}
+
 
 #home {
     z-index: 10;
-    color: #fff;
     height:100vh;
     width: 100%;
     display: flex; 
@@ -57,38 +118,49 @@ html, body {
     position: relative;
 }
 
+
 #home .name {
-    font-family: Gilroy;
-    color: #dadada;
+    color: rgb(0, 0, 0);
+    /* font-family: "Kajiro"; */
     font-size: 6vw;
-    -webkit-text-stroke: 2px #fff;
-    -webkit-text-stroke-width: 1px;
+
 }
 
-#home .name:hover {
-    color: #000000;
+#home span {
+    font-family: Gilroy;
+    color: #f5f3f3;
+    font-size: 6vw;
+    font-weight: 300;
+}
+
+#home .name span:hover {
+    -webkit-text-stroke: 3px #000000;
+    -webkit-text-stroke-width: 2px;
+    color: transparent;
 }
 
 #home .developer {
     font-family: Gilroy;
-    color: rgb(60, 57, 255);
-    font-size: 5.5vw;
-    -webkit-text-stroke: 2px #fff;
+    /* font-family: "Kajiro"; */
+    background: linear-gradient(#00a1ff,#00ff8f);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #000000;
     -webkit-text-stroke-width: 1px;
-}
-
-#home .developer:hover {
-    color: #000000;
 }
 
 
 #home .greeting {
     font-size: 4vw;
-    font-weight: 200;
-    opacity: 0.7;
+    font-weight: 300;
+    opacity: 0.5;
+    color: rgb(0, 0, 0);
 }
 
 .scroll {
+    color: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,9 +168,9 @@ html, body {
     margin-top: 5vw;
 }
 .scr-dn {
-    font-weight: 300;
+    font-weight: 500;
     font-size: 14px;
-    opacity: 0.8;
+    /* opacity: 0.8; */
     padding: 15px 10px;
 }
 .arrow {
@@ -106,38 +178,56 @@ html, body {
     opacity: 0.8;
 }
 
+
 #about{
     z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #000000;
-    height: 100vh;
+    color: #ffffff;
+    min-height: 100vh;
     width: 100%;
-    background-color: #dadada;
+    padding: 30px;
 }
 
 #about h1 {
+    font-family: "gilroy";
+    width: 100%;
+    text-align: center;
+    margin: 40px 0px ;
     z-index: 2;
-    font-size: 3vw;
-    margin-bottom: 20px; 
-    border-bottom: 2px solid black;
+    font-size: 4vw;
+    letter-spacing: 3px;
 }
 
+
 .about-me {
-    height: 70vh;
+    min-height: 80vh;
     width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+.about-me .left {
+    width: 50%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-me .left img{
-    height: 25vw;
-    width: 25vw;
-    border-radius: 50%;
-    border: 5px solid black;
+    height: 35vw ;
+    object-fit: cover;
+    filter: grayscale(1);
+    transition: all ease 0.5s;
+}
+
+.about-me .left img:hover {
+    filter: grayscale(0);
 }
 
 
@@ -145,134 +235,87 @@ html, body {
     width: 50%;
     font-size: 1.4vw;
     font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 1.5px;
+    word-spacing: 2px;
 }
 
-.resume-btn {
-    margin-top: 2vw;
-    padding: 1vw 2vw;
-    color: white;
-    background-color: rgb(0, 0, 0);
-    border: 1px solid rgb(255, 255, 255);
-    font-size: 1.1vw;
-    transition: all 0.3s;
+.about-me span {
+    font-weight: 800;
 }
 
-.resume-btn:hover{
-    cursor: pointer;
-    border: 1px solid black;
-    color: black;
-    background-color: #dadada;
-}
 
 #skills {
-    z-index: 10;
-    color: #fff;
-    height: 100vh;
+    background-color: #222;
+    min-height: 100vh;
     width: 100%;
-    background-color: #000000;
+    color: white;
+    padding: 5vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    gap: 50px;
 }
-/* 
-.skills-container {
+
+#skills #heading h1 {
+    font-size: 5vw;
+    margin-bottom: 10px;
+}
+
+#skills #heading h2 {
+    font-weight: 500;
+    opacity: 0.6;
+}
+
+#skill-set {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* border: 1px solid white; */
     width: 100%;
-    align-items: center;
-    justify-content: center;
-} */
-
-#skills h1 {
-    margin-bottom : 3vw;
-    text-align: center;
-    font-size: 3vw;
-    border-bottom: 2px solid white;
+    padding: 1vw 10vw;
 }
 
-#myskills {
-    /* padding-right: 8vw; */
-    width: 33%;
-    height: 70vh;
+#skills img {
+    height: 80px;
+    margin: 20px;
+    object-fit: cover;
+}
+
+#skills .skill-card {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-}
-
-
-#myskills .technology {
-    padding-bottom: 0.8vw;
-    padding-top: 0.8vw;
-    display: flex;
-    align-items: center;
-}
-
-#myskills .technology h3 {
-    margin-right: 1vw;
-}
-#myskills .technology .html {
-    font-size: 1.8vw;
-    color: #F16B31;
-}
-#myskills .technology .css {
-    font-size: 1.8vw;
-    color: #39ACDD;
-}
-#myskills .technology .javascript{
-    font-size: 1.8vw;
-    color: #EACC38;
-}
-#myskills .technology .reactjs {
-    font-size: 1.8vw;
-    color: #74CBE5;
-}
-#myskills .technology .mongodb {
-    font-size: 1.8vw;
-    color: #57AE52;
-}
-#myskills .bar {
-    height: 2.3vw;
-    width: 100%;
-    border: 2px solid white;
-}
-
-#myskills .bar .fill {
-    height: 2vw;   
+    height:150px;
+    width: 150px;
+    padding: 15px;
     background-color: #dadada;
+    color: #000000;
+    font-weight: 600;
+    margin: 10px;
+    border-radius: 6px;
 }
-
-#myskills .bar .html {
-    width: 85%;
+#skills #heading span {
+    color: #23cce2;
 }
-#myskills .bar .css {
-    width: 70%;
-}
-#myskills .bar .javascript {
-    width: 50%;
-}
-#myskills .bar .reactjs {
-    width: 40%;
-}
-#myskills .bar .mongodb {
-    width: 65%;
-}
-
 
 #projects {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     flex-direction: column;
     z-index: 10;
     max-height: 100%;
     width: 100%;
-    background-color: #dadada;
-    color: black;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
 }
 
 #projects h1 {
+    text-align: start;
     font-size: 3vw;
     margin: 3vw 2vw 2vw 2vw;
-    border-bottom: 2px solid black;
 }
 
 .cards {
@@ -283,7 +326,7 @@ html, body {
     height: fit-content;
     width: 80%;
     margin-bottom: 2vw;
-    background-color: rgb(171, 183, 236);
+    background-color: rgb(145, 139, 139);
     border-radius: 10px;
     padding: 2vw;
     position: relative;
@@ -293,15 +336,14 @@ html, body {
     height: 280px;
     width: 280px;
     margin: 1vw;
-    /* background-color: blue; */
     border-radius: 10px;
     background-color: #000000;
     color: white;
-    /* padding: 1.5vw; */
     position: relative;
     overflow: hidden;
 }
 .text-content h2 {
+    font-size: 2vw;
     padding-bottom: 1vw;
 }
 
@@ -325,95 +367,289 @@ html, body {
 }
 
 
-#contact {
-    z-index: 10;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+#footer {
+    color: white;
+    background-color: #201e1e;
     height: 100vh;
     width: 100%;
-    background-color: #000000;
-    color: #fff;
-}
-
-#contact .form {
-    position: relative;
-    height: 70vh;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    margin: 2vw 3vw 3vw 3vw;
-    padding: 0.4vw;
-}
-
-#contact h1 {
-    margin-top: 1.5vw;
-    font-size: 3vw;
-    border-bottom: 2px solid rgb(255, 255, 255);
-}
-
-.form div {
-    margin-bottom: 2vw;
-}
-
-label {
-    font-weight: 600;
-    font-size: 1.4vw;
-}
-
-input{
-    outline: none;
-    width: 100%;
-    padding: 0.7vw;
-    border: none;
-    border-radius: 5px;
-    background-color: #dadada;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-textarea {
-    outline: none;
-    max-width: 100%;
-    max-height: 30vh;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 0.7vw;
-    border: none;
-    border-radius: 5px;
-    background-color: #dadada;
-}
-
-input[type="submit"] {
-    margin-top: 1vw;
-    padding: 0.7vw;
-    border-radius: 5px;
-    border: none;
-    color: #fff;
-    background-color: rgb(60, 57, 255);
-    font-weight: 500;
-    font-size: 1.2vw;
-}
-
-#footer {
-    background-color: #dadada;
-    height: 40vh;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 3vw;
+    position: relative;
 }
 
-.socials i{
-    font-size: 2.4vw;
-    padding: 0.5vw;
+#footer h1 {
+    font-size: 7vw;
+    text-align: center;
+}
+
+#footer a:hover{
+    text-decoration: underline;
 }
 
 #footer h4 {
-    margin-top: 1vw;
+    position: absolute;
     font-weight: 400;
+    bottom: 10%;
+}
+
+
+@media (max-width:800px) {
+    #home .greeting {
+        font-size: 6vw;
+        margin-bottom: 10px;
+    }
+    #home .name {
+        font-size: 8vw;
+    }
+
+    #home .developer {
+        font-size: 9vw;
+    }
+
+    #about .left{
+        width: 50%;
+    } 
+    #about .right{
+        width: 50%;
+    } 
+
+    #about h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 5vw;
+        margin: 2vw 0;
+    }
+
+    #about img {
+        filter: grayscale(0);
+        height: 300px;
+    }
+
+    #about .right p {
+        font-size: 2vw;
+        letter-spacing: 0.8;
+        line-height: 1.3;
+    }
+    
+    #skills #heading h1 {
+        font-size: 7vw;
+    }
+
+    #skill-set {
+        padding: 3vw;
+    }
+
+    #skills img {
+        height: 60px;
+        width: 60px;
+    }
+
+    #skills .skill-card {
+        height:100px;
+        width: 100px;
+        padding: 60px;
+        font-size: 14px;
+    }
+
+    #footer {
+        height: 100vh;
+    }
+    #footer h1 {
+        font-size: 7.5vw;
+    }
+
+}
+
+@media (max-width:680px) {
+
+    #about {
+        padding: 0px;
+    }
+
+    #about .left{
+        height: 400px;
+        width: 50%;
+    } 
+    #about .right{
+        width: 50%;
+    } 
+
+    #about h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 5vw;
+        margin: 2vw 0;
+    }
+
+    #about img {
+        filter: grayscale(0);
+        height: 40vw;
+    }
+
+    #about .right p {
+        font-size: 2.5vw;
+        letter-spacing: 0.5;
+        line-height: 1.3;
+        word-spacing: 0;
+    }
+
+
+}
+
+@media (max-width:480px) {
+
+    
+    #home .name {
+        font-size: 10vw;
+    }
+    #home .developer {
+        font-size: 11vw;
+    }
+    #home .greeting {
+        font-size: 8vw;
+    }
+    #home .scroll {
+
+        margin-top: 35vw;
+    }
+
+
+    #about .about-me .left, #about .about-me .right{
+        width: 100%;
+        height: 50vh;
+    }
+    #about .about-me {
+        flex-direction: column;
+    }
+    #about h1 {
+        font-size: 7vw;
+    }
+    #about .left img {
+        height: 70vw;
+        width: 70vw;
+        border-radius: 50%;
+    }
+    #about .about-me .right p{
+        font-size: 5vw;
+        text-align: center;
+    }
+
+    #skills #heading h1 {
+        font-size: 9vw;
+    }
+
+    #skills #heading h2 {
+        font-size: 4.8vw;
+        opacity: 0.5;
+    }
+
+    #skill-set {
+        padding: 1vw;
+    }
+
+    #skills img {
+        height: 50px;
+        width: 50px;
+    }
+
+    #skills .skill-card {
+        height:50px;
+        width: 50px;
+        padding: 55px;
+        font-size: 10px;
+    }
+
+   
+    #footer h1 {
+
+        font-size: 12vw;
+        line-height: 1.3;
+    }
+}
+
+
+#certifications {
+    height: 85vh;
+    color: #fff;
+    padding: 50px;
+    background-color: #161515;
+}
+
+#certifications #cheading {
+    font-size: 4vw;
+}
+
+#certifications .certification-box {
+    width: 100%;
+    margin-top: 30px;
+
+}
+
+.certification-box .cbox {
+    border-top: 2.5px solid white;
+    font-weight: 600;
+    position: relative;
+    padding: 18px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.certification-box .cbox:nth-child(4) {
+    border-bottom: 2.5px solid rgb(255, 255, 255);
+}
+
+.certification-box .cbox h1 {
+    font-size: 2vw;
+    text-align: center;
+    position: relative;
+    z-index: 99;
+}
+
+.certification-box .cbox:hover h1 {
+    color: #000000;
+    cursor: pointer;
+
+}
+
+.hover-effect {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left:-100%;
+    background-color: #ffffff;
+    transition: left .4s ease;
+    color: black;
+    z-index: 0;
+}
+
+.certification-box .cbox:hover .hover-effect {
+    left: 0;
+}
+
+
+.cbox .inner-box {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cbox h1:nth-child(2) {
+    width: 25%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.cbox h1:nth-child(4) {
+    width: 25%;
+    display: flex;
+    justify-content: flex-end;
 }
 
