--- a/style.css
+++ b/style.css
@@ -70,6 +70,18 @@ html, body {
     font-family: 'Michroma', sans-serif;
 }
 
+.loading .progress {
+    width: 40%;
+    height: 40px;
+    border: 1px solid #fff;
+}
+
+.loading .progress .progressbar {
+    width: 100%;
+    height: 100%;
+    background-color: #dadada;
+}
+
 #home {
     z-index: 10;
     height:100vh;
@@ -506,8 +518,8 @@ html, body {
 }
 
 #footer {
-    color: rgb(0, 0, 0);
-    background-color: rgb(240, 240, 240);
+    color: rgb(255,255,255);
+    background-color: rgb(0,0,0);
     height: 100vh;
     width: 100%;
     display: flex;
