--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ html, body {
     position: fixed;
     z-index: 999;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: rgb(255, 255, 255);
